# segregation

./: .gitignore  gini.ipynb  global_segregation.ipynb  main.ipynb  main.py  pyproject.toml
data/: Base_SUN_2018.csv
data/mpios/: metropoli.dbf  metropoli.prj  metropoli.shx  mpios_en_metropoli.dbf  mpios_en_metropoli.shx
src/: bootstrap.py
src/segregation/: bootstrap.py  driver.py  estimate.py  get_met_zones.py  ipf.py  plots.py  postprocessing.py  preprocessing.py  seg.py
src/segregation/scripts/: common.py  generate_income_polygons.py  generate_polygons.py  generate_segregation_polygons.py  get_met_zones.py  merge_polygons.py
