[tool.poetry]
name = "segregation"
version = "0.1.0"
description = ""
authors = ["RodolfoFigueroa <4rodolfofigueroa2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
scipy = "1.8.1"
dask = {version = "2022.5.2", extras = ["complete"]}
geopandas = "0.10.2"
matplotlib = "3.5.2"
numpy = "1.22.4"
pandas = "1.3.5"
scikit-learn = "1.1.1"
xarray = "2022.3.0"
netcdf4 = "^1.6.3"
pyarrow = "^11.0.0"
datashader = "^0.14.4"
holoviews = "^1.15.4"
pre-commit = "^3.5.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[tool.poetry.scripts]
generate-income-polygons = "segregation.scripts.generate_income_polygons:main"
generate-segregation-polygons = "segregation.scripts.generate_segregation_polygons:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
