[project]
name = "segregation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "contextily>=1.7.0",
    "geopandas>=1.1.2",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3.260113",
    "scipy>=1.15.3",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D"]

[tool.basedpyright]
ignore = ["**/*.ipynb"]
